5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1650_652.log
== TEST (2019-04-15 18:35:20) 
-- CODE:
x=int(input("numero de 3 digitos:    "))
x//100
print(x)


-- OUTPUT:
728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:35:34) 
-- CODE:
x=int(input("numero de 3 digitos:    "))
y=x//100
print(y)


-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:35:48) 
-- CODE:
x=int(input("numero de 3 digitos:    "))
y=x//100
z=x%100
print(z)


-- OUTPUT:
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:36:30) 
-- CODE:
x=int(input("numero de 3 digitos:    "))
y=x//100
z=x%100
if(z%y==0):
	print(SIM)
else:
	print(NAO)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(SIM)
NameError: name 'SIM' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:36:33) 
-- CODE:
x=int(input("numero de 3 digitos:    "))
y=x//100
z=x%100
if(z%y==0):
	print(SIM)
else:
	print(NAO)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(SIM)
NameError: name 'SIM' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:36:55) 
-- CODE:
x=int(input("numero de 3 digitos:    "))
y=x//100
z=x%100
if(z%y==0):
	print("SIM")
else:
	print("NAO")

-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:36:59) 
-- CODE:
x=int(input("numero de 3 digitos:    "))
y=x//100
z=x%100
if(z%y==0):
	print("SIM")
else:
	print("NAO")

-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:37:02) 
-- CODE:
x=int(input("numero de 3 digitos:    "))
y=x//100
z=x%100
if(z%y==0):
	print("SIM")
else:
	print("NAO")

-- EXECUTION TIME:
0.169938
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
